<package format="3">
  <name>libfcl-dev</name>
  <version>0.7.0</version>
  <description>FCL: the Flexible Collision Library</description>
  <maintainer email="fcl@tri.global">TRI Geometry Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <depend>libccd-dev</depend>
  <depend>eigen</depend>
  <depend>octomap</depend>
  <!-- Following recommendations of REP 136 -->
  <exec_depend condition="ROS_VERSION == 1">catkin</exec_depend>

</package>
